test/testdata/classes/methods/duplicate_params_error.lox
// error: duplicate parameter x
// error: duplicate parameter y
class Foo {
  bar(x, y, z, x, y) {}
}
